kubernetes/apps/raphael/kopiur/config/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-versioned-schemas.pages.dev/gateway-api/1.6.1/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-versity
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - kopia-versity.raphael.clerici.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: versity-kopia-ui
          port: 51515
